--- a/flexBox/index.html
+++ b/flexBox/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <style>
+      .blocks {
+        display: flex;
+        justify-content: space-around;
+
+        > div {
+          width: 200px;
+          height: 200px;
+          background: red;
+        }
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div class="blocks">
+      <div></div>
+      <div></div>
+    </div>
+  </body>
 </html>
