--- a/flexBox/index.html
+++ b/flexBox/index.html
@@ -8,7 +8,8 @@
     <style>
       .blocks {
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
+        gap: 10px;
 
         > div {
           width: 200px;
