--- a/flexBox/index.html
+++ b/flexBox/index.html
@@ -7,9 +7,11 @@
 
     <style>
       .blocks {
+        height: 300px;
         display: flex;
         justify-content: center;
         gap: 10px;
+        background: #5f5f5f;
 
         > div {
           width: 200px;
