--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div>hello</div>
+    <!-- <div>hello</div> -->
 
     <div class="blocks">
       <div class="block">Hello</div>
