level-2/fixed line 21, 25 of the file index.html

--- a/homeWork/index.html
+++ b/homeWork/index.html
@@ -18,14 +18,14 @@
     </ul>
   </nav>
   <section class="section-staty">
-    <div class="staty_one">
+    <article class="staty_one">
     <h2 class="staty__title">Статья 1</h2>
     <p class="staty__content">Содержание статьи 1.</p>
-    </div>
-    <div class="staty_two">
+    </article>
+    <article class="staty_two">
     <h2 class="staty__title">Статья 2</h2>
     <p class="staty__content">Содержание статьи 2.</p>
-    </div>
+    </article>
         
   </section>
   <aside class="aside">
