--- a/index.html
+++ b/index.html
@@ -3,30 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+      rel="stylesheet"
+    /> -->
     <link rel="stylesheet" href="./index.css" />
     <title>Document</title>
   </head>
   <body>
-    <div class="user-card">
-      <div class="user-header">
-        <img
-          width="50"
-          height="50"
-          class="user-avatar"
-          src="https://ridhisidhioilindustries.com/static/assets/img/testimonial/1.png"
-          alt=""
-        />
-        <div class="user-info">
-          <h2 class="user-info-title">Test Testov</h2>
-          <span class="user-info-small">Frontend Developer</span>
-          <p class="user-info-desc">Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
+    <button class="login">Login</button>
 
-      <div class="user-info-footer">
-        <span>в поиске</span>
-        <span>в сети</span>
-      </div>
-    </div>
+    <input type="text" placeholder="email" class="field" />
+
+    <!-- <a href="">Link</a> -->
+    <!-- 
+    <ul>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+    </ul> -->
+
+    <!-- <header>
+      <img src="" alt="" />
+    </header>
+
+    <main>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+
+    <footer></footer> -->
   </body>
 </html>
