--- a/homework/level-1/7_задание.html
+++ b/homework/level-1/7_задание.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <p><img src="./images/флагИнгушетии.png" alt="флаг Ингушетии" title="подсказка: флаг"></p>
+  <img src="./images/флагИнгушетии.png" alt="флаг Ингушетии" title="подсказка: флаг">
 </body>
 </html>
