--- a/button1/index.html
+++ b/button1/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="button-container">
-        <button class="btn primary outline">Login</button>
+        <button class="btn">Login</button>
+        <button class="btn primary">Login</button>
+        <button class="btn outline">Login</button>
+        <button class="btn btn-max">Login</button>
     </div>
 </body>
 </html>
