--- a/cssVariables/index.html
+++ b/cssVariables/index.html
@@ -6,7 +6,5 @@
     <link rel="stylesheet" href="./index.css" />
     <title>Document</title>
   </head>
-  <body>
-    <button class="btn">Login</button>
-  </body>
+  <body></body>
 </html>
