--- a/others/navMenu.html
+++ b/others/navMenu.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./navMenu.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./navMenu.css" />
     <title>Document</title>
+  </head>
 
-</head>
-
-<body>
-
+  <body>
     <!-- <nav>
         <ul class="list">
             <li class="item">
                 <a href="">Home</a>
-
                 <ul class="item-list">
                     <li>item1</li>
                     <li>item2</li>
                 </ul>
-                
             </li>
             <li class="item">About</li>
             <li class="item">Portoflio</li>
         </ul>
 
     </nav> -->
-
 
     <!-- <header class="header">
         <ul>
@@ -40,10 +34,5 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi natus, numquam repudiandae quis nulla dolore atque porro dolores expedita itaque esse libero reiciendis voluptates, dolorum molestiae rerum laudantium sapiente placeat suscipit vero. Eius nesciunt ad, tempore praesentium deleniti commodi dolorem illum ullam error, architecto soluta! Pariatur delectus eius hic sapiente neque ea non ab quaerat animi odio sed debitis repellat sequi accusantium, quidem cumque ut corporis? Dolorum, nostrum necessitatibus? Maxime repellat amet, exercitationem quasi ipsa dolor corrupti nobis ex aut animi sed labore fugiat odit? Laudantium repellat sed distinctio rem accusamus. Rerum, explicabo aliquid alias officia aperiam itaque porro! Saepe similique aspernatur pariatur quae harum. Veritatis dolorem fugiat nobis nemo aperiam provident sequi ut enim deleniti, amet voluptatibus qui nihil voluptas blanditiis? Assumenda natus quisquam quidem repellat voluptatibus? Ullam similique ducimus temporibus ipsam nisi labore repudiandae! Omnis officia sapiente veritatis praesentium necessitatibus officiis dignissimos eveniet. Fugit odio asperiores perferendis expedita excepturi consequuntur beatae eum at itaque? Velit officiis sed dolore, quis consectetur cupiditate ipsam at ea. Vitae optio possimus velit eos corrupti eaque nulla, quo natus rerum aliquam sequi laudantium nam et. Aliquid neque in excepturi expedita ex dolor ipsa natus temporibus, hic labore tempora commodi repellat officia ratione praesentium dicta reiciendis totam quidem! Dolorem perferendis, eum, architecto ipsam adipisci sint possimus dolores est amet a sequi omnis aspernatur quibusdam, quo praesentium voluptate porro molestias ducimus fugiat aliquam eius rem error. Excepturi ut esse non provident voluptatum a iure tempora ipsum reprehenderit tempore magni animi consequuntur blanditiis, cumque distinctio expedita quis illo sed? Eligendi voluptatibus reprehenderit nisi soluta nostrum voluptas aspernatur repellendus error. Commodi aspernatur doloremque harum dolor temporibus omnis vero deleniti reprehenderit fugit aliquid. Incidunt asperiores, nesciunt placeat amet aspernatur illum animi culpa ratione enim earum maxime similique, officiis dolorem inventore. Blanditiis, eaque labore qui aperiam maiores magnam ipsam quia ullam. Dicta dignissimos at assumenda aut quasi eos odio? Fugiat animi ipsa iusto quod maiores magni, nesciunt sapiente libero harum deleniti assumenda ab sed atque corrupti ut eius blanditiis officia cumque accusantium, fugit odit rem esse ducimus. Iusto voluptatum id iste, tempore soluta eveniet quod sint minima quas dolorem consectetur eligendi dolorum dicta similique? Adipisci esse inventore corrupti debitis atque earum quis, enim quasi distinctio reiciendis, doloribus asperiores cum cumque. Dolorem temporibus placeat culpa consectetur, ut corrupti recusandae, et hic quos itaque dolores quaerat? Facilis aperiam, deleniti minima non optio ipsam esse neque iure eligendi. Quae quo dolore adipisci doloremque iste. In cupiditate eos quas veritatis amet hic maxime numquam reprehenderit nesciunt nisi libero ratione unde sequi, ad adipisci saepe eveniet iusto ipsa vero. Blanditiis voluptate perferendis, excepturi nobis quis consequatur. Accusantium placeat adipisci nobis quo natus nulla alias quam maxime libero, sed molestiae doloremque quaerat recusandae. Ab magnam consequatur provident, nam possimus consequuntur itaque est fugit, incidunt hic, tempore blanditiis iusto labore ratione culpa iste vel in minus voluptatibus optio dolores quae sit veritatis? Totam quia temporibus, modi explicabo omnis, dignissimos non natus delectus inventore, odio iure! Blanditiis aperiam sit ea at voluptatibus iure, odit cupiditate natus praesentium expedita, facilis sed culpa, itaque nostrum aspernatur provident repellat beatae impedit tenetur? Deserunt fugiat ullam praesentium ea maxime, excepturi veritatis porro explicabo similique obcaecati vero nam facilis, et commodi illo corrupti sed molestias. Quisquam, aliquid? Corporis eos tempore, asperiores nobis, quaerat nostrum ducimus nesciunt excepturi debitis odit, voluptatibus consectetur quo. Voluptatum tempora quibusdam ex possimus esse ullam ipsa quas magnam asperiores aliquam ducimus recusandae et, incidunt omnis cupiditate distinctio debitis odit rerum labore alias facilis quidem. Natus, sint nam sunt iste dicta eaque accusantium corporis eius accusamus explicabo incidunt autem laboriosam cupiditate. Consequuntur temporibus doloribus quaerat provident ab accusamus facere velit excepturi consectetur officia quia suscipit magnam mollitia nesciunt, repellendus libero, alias sequi ipsam deleniti at soluta molestiae vitae harum? Adipisci ad architecto saepe sit odio inventore consequatur, corrupti, totam perferendis facilis fugiat commodi possimus, expedita illum rerum. At accusantium itaque ipsum assumenda quo hic iste, dolore nesciunt molestiae. Qui soluta magnam, nam quisquam quae voluptatibus itaque numquam beatae eaque pariatur voluptatem ipsum ut nemo ad necessitatibus sunt tenetur fugit neque. Quisquam eligendi placeat consequatur repellendus perferendis molestiae sint. Ex eligendi nesciunt ipsum velit harum tempore dolor repudiandae vel magnam. Voluptatem necessitatibus, eaque nam quam asperiores fuga perferendis nulla earum dicta consectetur maxime et alias recusandae. Rerum aliquid, beatae laudantium voluptas eligendi nemo possimus dolore, aperiam tenetur ratione distinctio pariatur suscipit autem cumque eaque voluptate voluptatibus cupiditate nobis voluptatem dicta, accusantium soluta! Quos eos ipsam quam fugiat architecto corporis animi obcaecati saepe aliquam nisi! At, odio hic modi placeat quis, eveniet sequi, doloremque culpa saepe eos dolores. Quae, veniam quaerat provident ad assumenda repudiandae est aspernatur consectetur! Iusto illo reiciendis minus voluptatem, eveniet error, provident, aperiam facere libero blanditiis quo voluptate laborum enim in sit asperiores dicta! Excepturi dicta, repellat voluptatem velit quisquam assumenda beatae recusandae debitis vero sint sit culpa officia fugit omnis libero, cum ducimus? Architecto, voluptates hic? Veniam, alias voluptate nulla ducimus consequuntur nihil. Architecto eveniet quaerat dolor laudantium tenetur vitae ea voluptas placeat magnam harum accusantium, dolores sapiente est alias corrupti. Temporibus asperiores voluptatem reiciendis sint odio. Tempore assumenda ipsa unde veritatis, doloribus repellendus magni suscipit corrupti velit laboriosam adipisci aliquid impedit quisquam rem eligendi placeat quam in hic aliquam natus aut debitis totam dolor? At accusamus sunt dolores, vero dolore hic esse rem ratione exercitationem similique ullam qui, dicta perferendis. Earum, explicabo qui vel at debitis neque repellat ullam voluptatem, reiciendis recusandae excepturi et deleniti, ad assumenda. Quae quisquam excepturi inventore itaque nisi, dolor nam dicta id, ex molestiae autem consequatur accusamus, quis harum voluptas. Dolor quos quidem tempora commodi voluptas. Velit, maxime cupiditate laboriosam incidunt voluptatem quis cumque quidem eligendi beatae qui totam animi temporibus. Vel quam aut excepturi neque animi quae ut voluptate quaerat facilis possimus, ea quisquam cum nobis laborum soluta repellat, amet atque eaque. Odit quo, eos perspiciatis atque nulla reiciendis cumque eaque? Recusandae, esse repellendus enim autem accusantium porro doloribus. Unde odit, reiciendis accusamus harum optio tempore, sit veniam quas dicta, recusandae vero. Hic quod iste velit, mollitia doloribus nobis?
     </p> -->
-
-
-
-
-</body>
-
+  </body>
 </html>
