--- a/imports/RegisterPage.html
+++ b/imports/RegisterPage.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <title>Document</title>
   </head>
-  <body>
-    <button class="btn">Login</button>
-  </body>
+  <body></body>
 </html>
