--- a/Hard_maket/Application.html
+++ b/Hard_maket/Application.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./Styles/style.css" />
   </head>
   <body>
-    <header class="Header">
-      <nav class="Header_menu">
+    <header class="header">
+      <nav class="header_menu">
         <ul>
           <li><a href="./Login.html">Login</a></li>
           <li><a href="./Application.html">Application Form</a></li>
@@ -19,7 +19,7 @@
     </header>
     <main>
       <div class="input-container">
-        <form class="Form_login">
+        <form class="application_form">
           <h2 class="subtitle">Application Form</h2>
 
           <div
@@ -43,28 +43,53 @@
             />
           </div>
           <div class="tooltip tooltip-right" data-tooltip="Enter your Email">
-            <input type="email" left: 100%; class="input input-medium"
-            placeholder="Email" />
+            <input
+              type="email"
+              ;
+              class="input input-medium"
+              placeholder="Email"
+            />
           </div>
           <div class="tooltip tooltip-right" data-tooltip="Enter your Phone">
-            <input type="tel" left: 100%; class="input input-medium"
-            placeholder="Phone" />
+            <input
+              type="tel"
+              ;
+              class="input input-medium"
+              placeholder="Phone"
+            />
           </div>
           <div class="tooltip tooltip-right" data-tooltip="Enter your Address">
-            <input type="text" left: 100%; class="input input-medium"
-            placeholder="Address" data-tooltip="Enter your password" />
+            <input
+              type="text"
+              ;
+              class="input input-medium"
+              placeholder="Address"
+              data-tooltip="Enter your password"
+            />
           </div>
           <div class="tooltip tooltip-right" data-tooltip="Enter your City">
-            <input type="text" left: 100%; class="input input-medium"
-            placeholder="City" />
+            <input
+              type="text"
+              ;
+              class="input input-medium"
+              placeholder="City"
+            />
           </div>
           <div class="tooltip tooltip-right" data-tooltip="Enter your State">
-            <input type="text" left: 100%; class="input input-medium"
-            placeholder="State" />
+            <input
+              type="text"
+              ;
+              class="input input-medium"
+              placeholder="State"
+            />
           </div>
           <div class="tooltip tooltip-right" data-tooltip="Enter your Zip Code">
-            <input type="text" left: 100%; class="input input-medium"
-            placeholder="Zip Code" />
+            <input
+              type="text"
+              ;
+              class="input input-medium"
+              placeholder="Zip Code"
+            />
           </div>
           <div class="tooltip tooltip-right" data-tooltip="Comments">
             <textarea
