--- a/Hard_maket/User_profile.html
+++ b/Hard_maket/User_profile.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./Styles/style.css" />
   </head>
   <body>
-    <header class="Header">
-      <nav class="Header_menu">
+    <header class="header">
+      <nav class="header_menu">
         <ul>
           <li><a href="./Login.html">Login</a></li>
           <li><a href="./Application.html">Application Form</a></li>
@@ -24,7 +24,7 @@
         <p class="profile-description">Frontend Developer at Solvo Company</p>
         <button class="contact-button">Contact</button>
       </div>
-      <form class="Form_login">
+      <form class="user_profile_form">
         <h2 class="subtitle">Profile Form</h2>
         <input
           type="text"
@@ -32,16 +32,30 @@
           placeholder="First Name"
         />
         <input type="text" class="input input-medium" placeholder="Last Name" />
-        <input type="email" left: 100%; class="input input-medium "
-        placeholder="Email" /> <input type="text" left: 100%; class="input
-        input-medium " placeholder="Phone" /> <input type="text" left: 100%;
-        class="input input-medium " placeholder="Address" data-tooltip="Enter
-        your password" /> <input type="text" left: 100%; class="input
-        input-medium " placeholder="City" /> <input type="text" left: 100%;
-        class="input input-medium " placeholder="State" /> <input type="text"
-        left: 100%; class="input input-medium " placeholder="Zip Code" /> <input
-        type="text" left: 100%; class="comments input input-medium"
-        placeholder="About me" />
+        <input type="email" ; class="input input-medium" placeholder="Email" />
+        <input type="text" ; class="input input-medium" placeholder="Phone" />
+        <input
+          type="text"
+          ;
+          class="input input-medium"
+          placeholder="Address"
+          data-tooltip="Enter
+        your password"
+        />
+        <input type="text" ; class="input input-medium" placeholder="City" />
+        <input type="text" ; class="input input-medium" placeholder="State" />
+        <input
+          type="text"
+          ;
+          class="input input-medium"
+          placeholder="Zip Code"
+        />
+        <input
+          type="text"
+          ;
+          class="comments input input-medium"
+          placeholder="About me"
+        />
         <button class="btn btn-max primary">Update</button>
       </form>
     </main>
