--- a/Hard_maket/Login.html
+++ b/Hard_maket/Login.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./Styles/style.css" />
   </head>
   <body>
-    <header class="Header">
-      <nav class="Header_menu">
+    <header class="header">
+      <nav class="header_menu">
         <ul>
           <li><a href="./Login.html">Login</a></li>
           <li><a href="./Application.html">Application Form</a></li>
@@ -37,8 +37,12 @@
             />
           </div>
           <div class="tooltip tooltip-right" data-tooltip="Enter your password">
-            <input type="password" left: 100%; class="input input-medium"
-            placeholder="Password"/>
+            <input
+              type="password"
+              ;
+              class="input input-medium"
+              placeholder="Password"
+            />
           </div>
           <button class="btn btn-max primary">Login</button>
         </form>
