--- a/Hard_maket/Users.html
+++ b/Hard_maket/Users.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./Styles/style.css" />
   </head>
   <body>
-    <header class="Header">
-      <nav class="Header_menu">
+    <header class="header">
+      <nav class="header_menu">
         <ul>
           <li><a href="./Login.html">Login</a></li>
           <li><a href="./Application.html">Application Form</a></li>
@@ -17,8 +17,8 @@
         </ul>
       </nav>
     </header>
-    <main class="profile-container">
-      <div class="Users_cont">
+    <main class="users-container">
+      <div class="users_list">
         <h2 class="subtitle">Users List</h2>
         <div class="Profile_cont">
           <div class="profile-card">
@@ -27,7 +27,7 @@
             <p class="profile-description">
               Frontend Developer at Solvo Company
             </p>
-            <div class="rainbow_tag">
+            <div class="tags">
               <span class="tag tag-blue">HTML</span>
               <span class="tag tag-green">CSS</span>
               <span class="tag tag-red">JavaScript</span>
@@ -45,7 +45,7 @@
             <p class="profile-description">
               Frontend Developer at Solvo Company
             </p>
-            <div class="rainbow_tag">
+            <div class="tags">
               <span class="tag tag-blue">HTML</span>
               <span class="tag tag-green">CSS</span>
               <span class="tag tag-red">JavaScript</span>
@@ -63,7 +63,7 @@
             <p class="profile-description">
               Frontend Developer at Solvo Company
             </p>
-            <div class="rainbow_tag">
+            <div class="tags">
               <span class="tag tag-blue">HTML</span>
               <span class="tag tag-green">CSS</span>
               <span class="tag tag-red">JavaScript</span>
