--- a/test.html
+++ b/test.html
@@ -8,31 +8,16 @@
     <title>Document</title>
   </head>
   <body>
-    <span></span>
-    <a href=""></a>
-    <strong></strong>
-    <em></em>
-    <input type="text" />
-    <button></button>
-    <img src="" alt="" />
-    <label for=""></label>
+    <div class="block">
+      <div class="text-gray">test</div>
 
-    <!-- Block -->
-    <div></div>
-    <ul></ul>
-    <ol></ol>
-    <p></p>
-    <h1></h1>
-    <h2></h2>
-    <form action=""></form>
+      <h2 class="text-gray">Lorem ipsum dolor sit amet.</h2>
+    </div>
 
-    <!--  -->
-    <footer></footer>
-    <main></main>
-    <header></header>
-    <section></section>
-    <aside></aside>
-    <article></article>
-    <nav></nav>
+    <ul class="list">
+      <li>Item1</li>
+      <li>Item2</li>
+      <li>Item3</li>
+    </ul>
   </body>
 </html>
