--- a/about.html
+++ b/about.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./test.css" />
     <title>Document</title>
   </head>
   <body>
-    <a href="">Home</a>
-    <a href="./about.html">About</a>
-    <h1>Home</h1>
+    <a href="./test.html">Home</a>
+    <a href="#">About</a>
+    <h1>About</h1>
   </body>
 </html>
