--- a/figma5/index.html
+++ b/figma5/index.html
@@ -1,43 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap">
-  <title>Document</title>
-</head>
-<body>
-  <div class="discount">
-    <div class="container discount-wrap">
-      <p class="discount-info">
-        Sign up and get 20% off to your first order. <a href="">Sign Up Now</a>
-      </p>
-     <span class="discount-close"> &times;</span>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+    />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="discount">
+      <div class="container discount-wrap">
+        <p class="discount-info">
+          Sign up and get 20% off to your first order.
+          <a href="">Sign Up Now</a>
+        </p>
+        <span class="discount-close"> &times;</span>
+      </div>
     </div>
-  </div>
-  <header>
-    <div class="container">
-      <div class="header">
-        <a href=""> <img class="logo" src="./images/SHOP.CO.png" alt=""></a>
-         <ul class="header-list">
-           <li><a href="">Shop <img src="./images/Vector.png" alt=""></a></li>
-           <li><a href="">On Sale</a></li>
-           <li><a href="">New Arrivals</a></li>
-           <li><a href="">Brands</a></li>
-         </ul>
-         <div class="header-search">
-           <img class="loop" src="./images/Vector (1).png" alt="">
-           <input type="text" placeholder="Search for products...">
-         </div>
+    <header>
+      <div class="container">
+        <div class="header">
+          <a href=""> <img class="logo" src="./images/SHOP.CO.png" alt="" /></a>
+          <ul class="header-list">
+            <li>
+              <a href="">Shop <img src="./images/Vector.png" alt="" /></a>
+            </li>
+            <li><a href="">On Sale</a></li>
+            <li><a href="">New Arrivals</a></li>
+            <li><a href="">Brands</a></li>
+          </ul>
+          <div class="header-search">
+            <img class="loop" src="./images/Vector (1).png" alt="" />
+            <input type="text" placeholder="Search for products..." />
+          </div>
 
-         <div class="header-menu">
-          <a href=""> <img src="./images/Frame.jpg" alt=""></a>
-          <a href=""> <img src="./images/Frame (1).jpg" alt=""></a>
-         </div>
-         
-       </div>
-    </div>
-  </header>
-</body>
+          <div class="header-menu">
+            <a href=""> <img src="./images/Frame.jpg" alt="" /></a>
+            <a href=""> <img src="./images/Frame (1).jpg" alt="" /></a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="find-clothes">
+        <div class="container">
+          <div class="find-clothes-wrap">
+            <div class="find-clothes-left">
+              <div class="find-clothes-left-top">
+                <h1>FIND CLOTHES THAT MATCHES YOUR STYLE</h1>
+                <p class="find-clothes-desc">
+                  Browse through our diverse range of meticulously crafted
+                  garments, designed to bring out your individuality and cater
+                  to your sense of style.
+                </p>
+                <button class="btn shop-now">Shop Now</button>
+              </div>
+              <div class="review">
+                <div class="review-wrap">
+                  <h2>200+</h2>
+                  <p class="find-clothes-desc">International Brands</p>
+                </div>
+                <div class="review-wrap2">
+                  <h2>2,000+</h2>
+                  <p class="find-clothes-desc">High-Quality Products</p>
+                </div>
+                <div class="review-wrap3">
+                  <h2>30,000+</h2>
+                  <p class="find-clothes-desc">Happy Customers</p>
+                </div>
+              </div>
+            </div>
+            <img src="./images/Frame 126.svg  " alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="brands-section">
+        <div class="container">
+          <div class="logo-items">
+            <img src="./images/Group (2).png" alt="" />
+            <img src="./images/zara-logo-1 1.png" alt="" />
+            <img src="./images/gucci-logo-1 1.png" alt="" />
+            <img src="./images/prada-logo-1 1.png" alt="" />
+            <img src="./images/Group (3).png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
