--- a/test.html
+++ b/test.html
@@ -6,9 +6,5 @@
     <link rel="stylesheet" href="./test.css" />
     <title>Document</title>
   </head>
-  <body>
-    <a href="">Home</a>
-    <a href="./about.html">About</a>
-    <h1>Home</h1>
-  </body>
+  <body></body>
 </html>
