--- a/test.html
+++ b/test.html
@@ -6,7 +6,5 @@
 		<link rel="stylesheet" href="./test.css" />
 		<title>Document</title>
 	</head>
-	<body>
-		title
-	</body>
+	<body></body>
 </html>
