--- a/index.html
+++ b/index.html
@@ -1,45 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
-      rel="stylesheet"
-    /> -->
-    <link rel="stylesheet" href="./index.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <button class="login">Login</button>
-
-    <input type="text" placeholder="email" class="field" />
-
-    <!-- <a href="">Link</a> -->
-    <!-- 
-    <ul>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-    </ul> -->
-
-    <!-- <header>
-      <img src="" alt="" />
-    </header>
-
-    <main>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-    </main>
-
-    <footer></footer> -->
-
-    <!-- <div></div> -->
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <script src="index.js"></script>
+</body>
 </html>
