--- a/js/index.html
+++ b/js/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>Hi</h1>
 
-    <script src="./object.js"></script>
+    <script src="./4_ifAndFor.js"></script>
   </body>
 </html>
