--- a/work_1/index.html
+++ b/work_1/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <header class="header"><h1>hi</h1></header>
-    <script src="./index.js"></script>
+    <script src="./forAnd.js"></script>
   </body>
 </html>
