--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./scope.js"></script>
+    <div class="container">
+      <div class="newItem">Item</div>
+    </div>
+
+    <script src="./dom.js"></script>
   </body>
 </html>
