--- a/index.html
+++ b/index.html
@@ -3,13 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./main.css" />
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
+    <!-- <div class="container">
       <div class="newItem">Item</div>
-    </div>
+      <div class="newItem" id="newId">Item</div>
+    </div> -->
 
+    <!-- <button class="show">Show</button>
+
+    <p class="text">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odit.
+    </p> -->
+
+    <input class="field" type="text" placeholder="Text" value="" />
+
+    <button class="add">Add</button>
+    <!-- <button class="reset">reset</button> -->
+    <!-- <button class="dec">Dec</button> -->
+
+    <div class="list"></div>
+
+    <!-- <h1 class="count">0</h1> -->
     <script src="./dom.js"></script>
   </body>
 </html>
