--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- <a href="" id="linkId" class="link">test</a>
+    <a href="" id="linkId" class="linkTwo">asdsad</a> -->
     <!-- <div class="container">
       <div class="newItem">Item</div>
       <div class="newItem" id="newId">Item</div>
@@ -18,13 +20,19 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odit.
     </p> -->
 
-    <input class="field" type="text" placeholder="Text" value="" />
+    <!-- <input class="field" type="text" placeholder="Text" value="" /> -->
 
-    <button class="add">Add</button>
+    <div style="display: flex" class="block">
+      <input type="password" class="field" placeholder="add..." />
+      <button class="open">Show</button>
+      <button style="display: none" class="hide">Hide</button>
+    </div>
+
+    <!-- <button class="add">Add</button> -->
     <!-- <button class="reset">reset</button> -->
     <!-- <button class="dec">Dec</button> -->
 
-    <div class="list"></div>
+    <!-- <div class="list"></div> -->
 
     <!-- <h1 class="count">0</h1> -->
     <script src="./dom.js"></script>
