--- a/games/game2/index.html
+++ b/games/game2/index.html
@@ -3,9 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Quiz Game</title>
   </head>
   <body>
+    <div id="quiz-container">
+      <h1>Math Quiz</h1>
+      <div id="question-container">
+        <p id="question"></p>
+        <input type="number" id="answer" />
+        <button id="submit-answer">Submit</button>
+      </div>
+      <p id="feedback"></p>
+      <p id="score"></p>
+      <!-- <button id="next-question" style="display: none">Next Question</button> -->
+    </div>
+
     <script src="./main.js"></script>
   </body>
 </html>
